# iced-toasts

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  output.txt
src/: left_border.rs  lib.rs  main.rs  toast.rs
src/toast/: left_border.rs
